Add EF Core repository and SQL Server integration
Introduced `EFStoreRepository` and `IStoreRepository` for data access abstraction. Updated `Product` class with additional properties and database column configuration. Added `StoreDbContext` for Entity Framework Core integration.

Configured dependency injection for repository and DbContext in `Program.cs`. Enabled SQL Server support with connection string in `appsettings.json`. Added required NuGet packages and `dotnet-ef` CLI tool for migrations.

Updated `SportsStore.csproj` to include EF Core dependencies.

--- a/SportsStore/appsettings.json
+++ b/SportsStore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SportsStoreConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SportsStore;Integrated Security=True;Connect Timeout=30;Encrypt=False;MultipleActiveResultSets=true;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;Command Timeout=30"
+  }
 }
